# SRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
config/: default.json
data/: out copy 2.exr  out copy.exr  out.exr  ref.exr  spp_50.exr  spp_500.exr  spp_5000.exr
data/CornellBox/: CornellBox-Glossy.mtl
data/SimpleSphere/: sphere.mtl
example/: cornell_box.pbrt  default.json  example.json  example_obj.json  example_pbrt.json  readme.md
example/anime-cube/: AnimatedCube.gltf
example/broken_steampunk_clock/: license.txt  scene.gltf
extensions/OpenGL/glad/: glad.h
extensions/glad/: glad.c
extensions/implot/src/: implot.cpp
extensions/stb_image/: stb_image.h
extensions/tinyexr/: tinyexr.h
extensions/tinyply/: readme.md
src/: CMakeLists.txt  hello.cu  main.cpp  main.cu  metric.cu  test.cu  tmp.cu
src/argparse/: argparse.h
src/definition/: CMakeLists.txt  definition.cpp  definition.cu  definition.h
src/device_include/: helper_optix.h  my_math.h  my_params.h  srt_math.h
src/device_include/launchParams/: LaunchParams.h  bdptParams.h
src/device_include/launch_params/: launch_params.h
src/device_include/math/: aabb.h  basic.h  matrix.h  onb.h  quaternion.h  random.h  ray.h  transform.h
src/device_include/params/: hit_info.h  integrator_params.h  launch_params.h  npr_params.h  params_data.h  wavefront_params.h
src/device_include/scene/: bxdf.h  camera.h  gmaterial.h  gmesh.h  light.h  material.h  mesh_data.h
src/gui/: CMakeLists.txt  gui.cpp  gui.h  hello.frag  hello.vert
src/importer/: CMakeLists.txt  assimp.cu  assimp.h  pbrtparse.cu  pbrtparse.h
src/main/: CMakeLists.txt  SuperRay.cu  main.cu  metric.cpp  srtracer.cu  test.cu
src/metric/: metric.h
src/optix/: CMakeLists.txt  bdpt.cu  bdpt.h  integrator.cu  integrator.h  optixRayTracer.cu  optixRayTracer.h  optix_ray_tracer.cpp  optix_ray_tracer.cu  optix_ray_tracer.h  pathTracer.cu  pathTracer.h  wavefront.h
src/passes/: CMakeLists.txt  film.cu  film.h  renderpass.h
src/passes/integrator/: integrator.cu  integrator.h  light_tracer.cu  light_tracer.h  path_tracer.cu  pathtracer.cu  pathtracer.h  safe_pass.cu  safe_pass.h
src/passes/npr/: neural_radiosity.cu  neural_radiosity.h  simple.cu  simple.h
src/passes/postprocess/: accumulate.cu  accumulate.h  denoise.cu  denoise.h  measure.cu  measure.h  tonemapping.cu  tonemapping.h
src/passes/wavefront/: wavefront.cu  wavefront.h
src/process/: CMakeLists.txt  film.cu  film.h  process.h
src/process/integrator/: integrator.cu  integrator.h
src/process/postprocess/: accumulate.cu  accumulate.h  denoise.cu  denoise.h  tonemapping.cu  tonemapping.h
src/renderer/: CMakeLists.txt  pbrtparse.cu  pbrtparse.h  renderer.cpp  renderer.cu  renderer.h
src/scene/: CMakeLists.txt  animation.cpp  animation.h  assimp.cpp  assimp.h  bone.h  film.cu  film.h  helper_scene.h  material.cu  material.h  mesh.cpp  mesh.h  parser.cpp  parser.h  scene.cpp  scene.cu  scene.h  texture.cpp  texture.cu  texture.h
src/shader/: CMakeLists.txt  pathTracer.cu
src/shader/bdpt/: bdpt.cu  cameraPath.cu
src/shader/integrator/: light_tracer.cu  path_tracer.cu
src/shader/npr/: nr_lhs.cu  nr_rhs.cu  simple.cu
src/shader/path/: __path_tracer.cu  light_tracer.cu  path_tracer.cu
src/shader/pathTracer/: directLight.cu  lightTracer.cu  pathTracer.cu  pathTracer_.cu  pathTracer_NEE.cu
src/shader/shade/: material_adjuster.cu  simple.cu  simple_shader.cu
src/shader/wavefront/: closest.cu  shadow.cu
src/temp/: gui_.cpp  gui_.h  integrator.cu  integrator.h  main_.cu  optix_ray_tracer_.cpp  optix_ray_tracer_.h  renderer_.cu  renderer_.h  scene_.cpp  scene_.h  wavefront.cu  wavefront_params.h
src/temp/bdpt/: light_path.cu
src/temp/path/: direct_light.cu
src/temp/wavefront/: closest.cu  shadow.cu
src/ttmp/: CMakeLists.txt  material.h  mesh.h  scene.cu  scene.h
src/utils/: argparse.h  metric.h  metrics.h  profiler.h
