include_directories(argparse)
include_directories(device_include)
include_directories(definition)
include_directories(gui)
include_directories(metric)
include_directories(scene)
include_directories(optix)
include_directories(renderer)
add_subdirectory(definition)
add_subdirectory(gui)
add_subdirectory(scene)
add_subdirectory(optix)
add_subdirectory(shader)
add_subdirectory(renderer)

# add_executable(hello hello.cu)
# target_link_libraries(hello PUBLIC renderer)

add_executable(main main.cpp)
target_link_libraries(main PUBLIC renderer)

add_executable(metric metric.cpp)
target_link_libraries(metric PUBLIC definition)

add_executable(test test.cu)
target_link_libraries(test PUBLIC renderer)